added the instructions

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Hello there! We welcome you to the file responsible to beautify your task. Go through the elements once by searching for them and please don't get overwhelmed by these hundreds of lines of code because once you start knowing that they do, they're beautiful (here, quite literally xD)*/
+
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
