--- a/style.css
+++ b/style.css
@@ -24,17 +24,18 @@ body{
 .hacker-area h1 {
   padding: 12px 10px 0 10px;
   margin: 0;
-  font-size: 25px;
+  font-size: 35px;
   font-weight: 400;
-  color: rgba(224, 16, 16, 0.6);
-  font-style: italic;
+  color: rgb(255, 115, 0);
+  font-family: 'Supermercado One', cursive;
   position: absolute;
   top: 0;
 }
 
 h1 strong {
-  color: rgb(243, 31, 31);
-  font-style: normal;
+  color: rgb(255, 0, 242);
+  font-family: 'Syne Tactile', cursive;
+  font-size: 58px;
 }
 
 .hacker-area,
@@ -53,13 +54,13 @@ h1 strong {
 .hacker-area {
   background-position: bottom;
   align-items: flex-end;
-  background-color: #0621b8;
+  background-color: #13b305;
 }
 
 .player-area {
   background-position: top;
   align-items: top;
-  background-color: #019601;
+  background-color: #014e96;
 }
 
 .player-area .card {
