--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ button.next-turn {
   bottom: 20px;
   transition: all .15s ease-out;
   background: black;
-  display: none;
+  display:none;
 }
 
 .during-game .next-turn {
@@ -174,6 +174,7 @@ button:active {
 .winner-section {
   display: none;
   position: fixed;
+  text-align: center;
   padding: 15px 0;
   left: 0;
   right: 0;
@@ -397,7 +398,7 @@ button[disabled=true] {
   height: 30px;
   text-align: center;
   border-radius: 50%;
-  color: rgba(0,0,0,0);
+  color: black;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -428,4 +429,7 @@ button[disabled=true] {
   100% {
     transform: scaleX(1);
   }
+}
+.hacker-area .life-total{
+  height:30px;
 }
