--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h1 strong {
 .player-area {
   background-position: top;
   align-items: top;
-  background-color: #2563eb;
+  background-color: #c0eb25;
 }
 
 .player-area .card {
